--- a/RotationComparison/RotationComparison.csproj
+++ b/RotationComparison/RotationComparison.csproj
@@ -46,12 +46,22 @@
         <Compile Include="GW2Api\ApiApiDataSource.cs" />
         <Compile Include="GW2Api\FileApiDataSource.cs" />
         <Compile Include="GW2Api\IApiDataSource.cs" />
+        <Compile Include="JsonModel\JsonRotation.cs" />
         <Compile Include="Logs\EliteInsightsUrlLogSource.cs" />
         <Compile Include="Logs\FileLogSource.cs" />
         <Compile Include="Logs\ILogSource.cs" />
+        <Compile Include="Logs\ScratchParserLogSource.cs" />
+        <Compile Include="Logs\StreamLogSource.cs" />
         <Compile Include="Program.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
         <Compile Include="RotationComparisonGenerator.cs" />
+        <Compile Include="Rotations\PlayerData.cs" />
+        <Compile Include="Rotations\Rotation.cs" />
+        <Compile Include="Rotations\RotationItem.cs" />
+        <Compile Include="Rotations\RotationItemType.cs" />
+        <Compile Include="Rotations\SkillCastType.cs" />
+        <Compile Include="Rotations\SkillCast.cs" />
+        <Compile Include="Rotations\WeaponSwap.cs" />
     </ItemGroup>
     <ItemGroup>
       <ProjectReference Include="..\ScratchEVTCParser\ScratchEVTCParser.csproj">
