--- a/ArcdpsLogManager/ArcdpsLogManager.csproj
+++ b/ArcdpsLogManager/ArcdpsLogManager.csproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
@@ -74,11 +74,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ApiData.cs" />
+    <Compile Include="CacheDialog.cs" />
     <Compile Include="Controls\GroupCompositionControl.cs" />
     <Compile Include="Controls\GuildDetailPanel.cs" />
     <Compile Include="Controls\LogDetailPanel.cs" />
     <Compile Include="Controls\MultipleLogPanel.cs" />
     <Compile Include="Controls\PlayerDetailPanel.cs" />
+    <Compile Include="Data\LogCache.cs" />
     <Compile Include="GameData.cs" />
     <Compile Include="GridViewSorter.cs" />
     <Compile Include="GW2Api\V2\ApiGuild.cs" />
