--- a/ArcdpsLogManager/packages.config
+++ b/ArcdpsLogManager/packages.config
@@ -1,9 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AtkSharp" version="3.22.24.29" targetFramework="net472" />
+  <package id="CairoSharp" version="3.22.24.29" targetFramework="net472" />
   <package id="Eto.Forms" version="2.4.1" targetFramework="net471" />
-  <package id="Eto.Platform.Gtk3" version="2.4.1" targetFramework="net471" />
+  <package id="Eto.Platform.Gtk" version="2.4.1" targetFramework="net472" />
   <package id="Eto.Platform.Wpf" version="2.4.1" targetFramework="net471" />
+  <package id="GdkSharp" version="3.22.24.29" targetFramework="net472" />
+  <package id="GioSharp" version="3.22.24.29" targetFramework="net472" />
+  <package id="GLibSharp" version="3.22.24.29" targetFramework="net472" />
+  <package id="GtkSharp" version="3.22.24.29" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net471" />
+  <package id="PangoSharp" version="3.22.24.29" targetFramework="net472" />
   <package id="RestSharp" version="106.5.4" targetFramework="net472" />
   <package id="System.ComponentModel" version="4.3.0" targetFramework="net471" />
   <package id="System.Runtime.Serialization.Primitives" version="4.3.0" targetFramework="net471" />
