--- a/ArcdpsLogManager/ArcdpsLogManager.csproj
+++ b/ArcdpsLogManager/ArcdpsLogManager.csproj
@@ -102,13 +102,15 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ApiData.cs" />
-    <Compile Include="CacheDialog.cs" />
     <Compile Include="Controls\GroupCompositionControl.cs" />
     <Compile Include="Controls\GuildDetailPanel.cs" />
     <Compile Include="Controls\LogDetailPanel.cs" />
     <Compile Include="Controls\MultipleLogPanel.cs" />
     <Compile Include="Controls\PlayerDetailPanel.cs" />
     <Compile Include="Data\LogCache.cs" />
+    <Compile Include="Dialogs\ApiDialog.cs" />
+    <Compile Include="Dialogs\CacheDialog.cs" />
+    <Compile Include="Dialogs\SettingsDialog.cs" />
     <Compile Include="GameData.cs" />
     <Compile Include="GridViewSorter.cs" />
     <Compile Include="GW2Api\V2\ApiGuild.cs" />
@@ -137,7 +139,6 @@
     <Compile Include="Sections\Players\PlayerData.cs" />
     <Compile Include="Sections\Statistics.cs" />
     <Compile Include="Settings.cs" />
-    <Compile Include="SettingsDialog.cs" />
     <Compile Include="Timing\Cooldown.cs" />
     <Compile Include="Uploaders\DpsReportUploader.cs" />
     <Compile Include="Uploaders\IUploader.cs" />
